--- a/.prettierignore
+++ b/.prettierignore
@@ -12,6 +12,10 @@
 /.next/
 /out/
 
+# IDE default files
+/.idea/
+/.vscode/
+
 # production
 /build
 
@@ -23,17 +27,32 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
-.env*.local
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.deploy.sh
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
+deploy.sh
+build.sh
+dobuild.sh
+
+dev
+
 next-env.d.ts
 
-# no tv in git
+/src/graphql
+
 /public/lib/trading_view
+
+#styles
+/styles/css/bootstrap.min.css
+/styles/css/nprogress.css
