--- a/package.json
+++ b/package.json
@@ -6,18 +6,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pretty": "prettier --write ."
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
+    "classnames": "^2.3.2",
+    "next": "^12.2.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.7.1",
+    "react-outside-click-handler": "^1.3.0",
+    "react-redux": "^8.0.2",
+    "react-responsive": "^9.0.2",
+    "redux": "^4.2.0",
+    "sass": "^1.46.0",
+    "socket.io-client": "^4.5.4",
+    "typescript": "4.5.2",
+    "use-dark-mode": "^2.3.1"
+  },
+  "devDependencies": {
     "@next/font": "13.1.6",
-    "@types/node": "18.11.19",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "@types/node": "16.11.9",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "17.0.36",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-outside-click-handler": "^1.3.1",
+    "@types/socket.io-client": "^3.0.0",
+    "eslint": "7",
+    "eslint-config-next": "12.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "2.7.1",
+    "typescript": "4.5.2"
   }
 }
